2025-12-18T01:00:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20322317835 # 842
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-18
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 685 1079 / 687 1081
* notice: next accum: outdated-unq outdated-all / unq all: 685 1079 / 688 1082
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-17]

2025-12-11T01:04:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20118439682 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-11
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 685 1079 / 686 1080
* notice: next accum: outdated-unq outdated-all / unq all: 685 1079 / 687 1081
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-10]

2025-12-08T01:02:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20013350491 # 832
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-08
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 684 1078 / 685 1079
* notice: next accum: outdated-unq outdated-all / unq all: 685 1079 / 686 1080
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-11-20] / [2025-12-07]

2025-11-29T00:58:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19776715409 # 823